SERVER-68094: Use $replaceRoot instead of $project